# bmi270_zephyr_api

./: README.md
boards/: Kconfig.irv1  board.yml
examples/bmi270_interrupt/: CMakeLists.txt  Kconfig  prj.conf
examples/bmi270_interrupt/boards/: Kconfig.defconfig  board.cmake  irv1-pinctrl.dtsi  irv1.dts  irv1.yml
examples/bmi270_interrupt/src/: bmi270_api.c  main.c
